@@ -19,7 +19,6 @@
 */
 package com.jopdesign.wcet08.frontend;
 
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
